--- a/index.html
+++ b/index.html
@@ -4,12 +4,37 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Tres Cards</title>
   </head>
   <body>
     <div class="container">
       <div class="card-wrapper">
-        <div class="card"></div>
+        <div class="card">
+          <div class="pic_img">
+            <img src="./icons/icon1.png" alt="A color wheel." />
+          </div>
+
+          <div class="title">
+            <h5>Applying color to UI</h5>
+          </div>
+
+          <div class="info">
+            <p>In a UI, color has variety of roles:...</p>
+          </div>
+
+          <div class="related_link">
+            <p>Related link</p>
+          </div>
+
+          <div class="icon_arrow">
+            <i
+              ><img
+                src="https://cdn-icons-png.flaticon.com/512/9344/9344197.png"
+                alt="icon?"
+            /></i>
+          </div>
+        </div>
       </div>
     </div>
   </body>
