--- a/index.html
+++ b/index.html
@@ -11,28 +11,36 @@
     <div class="container">
       <div class="card-wrapper">
         <div class="card">
-          <div class="pic_img">
-            <img src="./icons/icon1.png" alt="A color wheel." />
+          <div class="card-content">
+            <div class="pic_img">
+              <img src="./icons/icon1.png" alt="A color wheel." />
+            </div>
+
+            <div class="content-info">
+              <div class="title">
+                <h5>Applying color to UI</h5>
+              </div>
+
+              <div class="info">
+                <p>In a UI, color has variety of roles:...</p>
+              </div>
+            </div>
           </div>
 
-          <div class="title">
-            <h5>Applying color to UI</h5>
-          </div>
+          <div class="link_text_arrow">
+            <div class="related_link">
+              <p>Related link</p>
+            </div>
 
-          <div class="info">
-            <p>In a UI, color has variety of roles:...</p>
-          </div>
-
-          <div class="related_link">
-            <p>Related link</p>
-          </div>
-
-          <div class="icon_arrow">
-            <i
-              ><img
-                src="https://cdn-icons-png.flaticon.com/512/9344/9344197.png"
-                alt="icon?"
-            /></i>
+            <div class="icon_arrow">
+              <a href="#">
+                <i>
+                  <img
+                    src="https://cdn-icons-png.flaticon.com/512/9344/9344197.png"
+                    alt="icon?" />
+                </i>
+              </a>
+            </div>
           </div>
         </div>
       </div>
