made 2 more cards
Made a total of 3 cards and center them all.

--- a/index.html
+++ b/index.html
@@ -43,6 +43,72 @@
             </div>
           </div>
         </div>
+        <div class="card">
+          <div class="card-content">
+            <div class="pic_img">
+              <img src="./icons/icon1.png" alt="A color wheel." />
+            </div>
+
+            <div class="content-info">
+              <div class="title">
+                <h5>Applying color to UI</h5>
+              </div>
+
+              <div class="info">
+                <p>In a UI, color has variety of roles:...</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="link_text_arrow">
+            <div class="related_link">
+              <p>Related link</p>
+            </div>
+
+            <div class="icon_arrow">
+              <a href="#">
+                <i>
+                  <img
+                    src="https://cdn-icons-png.flaticon.com/512/9344/9344197.png"
+                    alt="icon?" />
+                </i>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-content">
+            <div class="pic_img">
+              <img src="./icons/icon1.png" alt="A color wheel." />
+            </div>
+
+            <div class="content-info">
+              <div class="title">
+                <h5>Applying color to UI</h5>
+              </div>
+
+              <div class="info">
+                <p>In a UI, color has variety of roles:...</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="link_text_arrow">
+            <div class="related_link">
+              <p>Related link</p>
+            </div>
+
+            <div class="icon_arrow">
+              <a href="#">
+                <i>
+                  <img
+                    src="https://cdn-icons-png.flaticon.com/512/9344/9344197.png"
+                    alt="icon?" />
+                </i>
+              </a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
