--- a/index.html
+++ b/index.html
@@ -43,19 +43,20 @@
             </div>
           </div>
         </div>
+
         <div class="card">
           <div class="card-content">
             <div class="pic_img">
-              <img src="./icons/icon1.png" alt="A color wheel." />
+              <img src="./icons/icon2.png" alt="A comment icon." />
             </div>
 
             <div class="content-info">
               <div class="title">
-                <h5>Applying color to UI</h5>
+                <h5>Imagery in UI</h5>
               </div>
 
               <div class="info">
-                <p>In a UI, color has variety of roles:...</p>
+                <p>Imagery communicates an...</p>
               </div>
             </div>
           </div>
@@ -76,6 +77,7 @@
             </div>
           </div>
         </div>
+
         <div class="card">
           <div class="card-content">
             <div class="pic_img">
@@ -84,11 +86,11 @@
 
             <div class="content-info">
               <div class="title">
-                <h5>Applying color to UI</h5>
+                <h5>The color system</h5>
               </div>
 
               <div class="info">
-                <p>In a UI, color has variety of roles:...</p>
+                <p>Create a color theme that reflects...</p>
               </div>
             </div>
           </div>
